# translator-linebot

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cloudformation-template.yaml  deploy.sh  lambda_function.py  pyproject.toml  requirements-layer.txt
.github/: labeler.yml
.github/workflows/: ci.yml  labeler.yml
tests/: test_bedrock.py
